# AI-Receptionist-production-level-vapi-python-fast_api

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/v1/: router.py  vapi_tools.py
app/core/: __init__.py  config.py  logging.py  security.py
app/models/: __init__.py  resources.py
app/schemas/: reservations.py
app/services/: calendar_service.py  notification_service.py  reservation_service.py  resource_allocator.py
app/utils/: idempotency.py  time.py
docs/: ai-receptionist-v1-plan.md  development-sessions.md  vapi-receptionist-prompt.md  vapi-tool-migration.md
docs/kb/: abcd-steakhouse-kb.md
docs/superpowers/plans/: 2026-06-25-project-scaffold.md
tests/integration/: test_vapi_routes.py
tests/unit/: test_calendar_service.py  test_notification_service.py  test_public_demo_identity.py  test_reservation_notifications.py  test_reservation_schemas.py  test_reservation_service.py  test_resource_allocator.py  test_security.py  test_time_rules.py
