[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "abcd-steakhouse-ai-receptionist"
version = "0.1.0"
description = "FastAPI backend for the ABCD Steakhouse AI receptionist."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "google-api-python-client>=2.140.0",
    "google-auth>=2.34.0",
    "twilio>=9.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:Warning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
